--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,32 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <div class="header">
-     <div class="headline">
-       the rainwaters
-     </div>
-     <div class="subtext">
-       EST. SEPTEMBER 2017
-     </div>
+<div class="header">
+  <div class="headline">
+    the rainwaters
   </div>
- 
-  <current-blogs>
+  <div class="subtext">
+    EST. SEPTEMBER 2017
+  </div>
+</div>
+<div class="header-images">
+  <div class="row">
+    <div class="col-md-3">
+      <img src="assets/images/kj-portra(207).jpg">
+    </div>
+    <div class="col-md-3">
+      <img src="assets/images/kj-portra(214).jpg">
+    </div>
+    <div class="col-md-3">
+      <img src="assets/images/kj-portra(277).jpg">
+    </div>
+    <div class="col-md-3">
+        <img src="assets/images/kj-ceremony(62).jpg">
+    </div>
+  </div>
+</div>
+<div class="nav">
+  <span>HOME</span>
+  <span>LIFE</span>
+</div>
 
-  </current-blogs>
+<current-blogs>
+
+</current-blogs>
