--- a/src/app/current-blogs/current-blogs.component.html
+++ b/src/app/current-blogs/current-blogs.component.html
@@ -1,23 +1,27 @@
 <div class="blogs-view">
 
-    <div *ngFor="let blog of blogs" class="row">
-        <div class="col-md-2 date">
+    <div *ngFor="let blog of blogs" class="row post-container">
+        <div class="col-md-3 post-date">
             <div class="month">{{blog.month}}</div>
             <div class="day">{{blog.day}}</div>
             <p>{{'{'}} {{blog.year}} {{'}'}}</p>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-4 post-left">
             <div class="image-container">
-                <img width=100% src="assets/images/{{blog.cover}}">
+                <img class="pointer" width=100% src="assets/images/{{blog.cover}}">
             </div>
-            <div class="overlay-info">
-                <div class="title">
+        </div>
+        <div class="col-md-4 post-right">
+            <div class="post-content">
+                <div class="timeline">6 days ago
+                    <span class="dash">-</span> {{blog.location}}</div>
+                <div class="title pointer">
                     {{blog.title}}
                 </div>
                 <div class="content">
-                    {{blog.content}}...
+                    {{blog.content.substring(0,140)}}...
                 </div>
-                <div class="title">
+                <div class="see-more pointer">
                     see full post ->
                 </div>
             </div>
