--- a/src/app/blogs/blogs-list/blogs-list.component.html
+++ b/src/app/blogs/blogs-list/blogs-list.component.html
@@ -15,14 +15,14 @@
             <div class="post-content">
                 <div class="timeline">6 days ago
                     <span class="dash">-</span> {{blog.location}}</div>
-                <div class="title pointer">
+                <div class="title pointer" (click)="viewPost(blog.id)">
                     {{blog.title}}
                 </div>
                 <div class="content">
                     {{blog.content.substring(0,140)}}...
                 </div>
                 <div class="see-more pointer">
-                    see full post ->
+                    <a (click)="showBlog(blog.id)" > see full post -> </a>
                 </div>
             </div>
         </div>
