--- a/src/app/blogs/blogs-list/blogs-list.component.html
+++ b/src/app/blogs/blogs-list/blogs-list.component.html
@@ -15,7 +15,7 @@
             <div class="post-content">
                 <div class="timeline">6 days ago
                     <span class="dash">-</span> {{blog.location}}</div>
-                <div class="title pointer" (click)="viewPost(blog.id)">
+                <div class="title pointer" (click)="showBlog(blog.id)">
                     {{blog.title}}
                 </div>
                 <div class="content">
