--- a/src/app/blogs/blog-view/blog-view.component.css
+++ b/src/app/blogs/blog-view/blog-view.component.css
@@ -1,12 +1,66 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400');
 
-.blog-detail-container {
+
+.blog-detail {
     margin:120px 15%;
-    text-align:center;
-    border:1px solid #848484;
+}
+
+.blog-detail-container {
+    text-align:left;
+    border:1px solid #b1b0ae;
     padding: 80px;
 }
+
+.detail-title {
+    font-size: 40px;
+    font-family: 'Bad Script', cursive;
+    padding-bottom: 20px;
+    color: #6b6b6a;
+}
+
+.detail-content {
+    font-family: 'Lato', sans-serif;
+    font-size: 17px;
+    line-height: 1.85em;
+    font-weight: 300;
+    padding-bottom: 68px;
+}
+
+.divider {
+    border-bottom: 2px solid rgba(189, 220, 181, 0.7411764705882353);
+    margin-right:60%;
+}
+
+.detail-date {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 13px;
+    padding-bottom: 23px;
+    letter-spacing: 0.05em;
+}
+
+.location {
+    color: #a1c597;
+    font-weight:400;
+}
+
+.back {
+    font-size: 20px;
+    text-align: left;
+    margin: 20px;
+    font-family: 'Bad Script', cursive;
+}
+
+.back a {
+    color: #a1c597;
+    text-decoration:none;
+}
+
+.back a:hover {
+    color:grey;
+}
+
 
 .timeline {
 
